# NextGem

./: .common_setup  .eccc_setup_gnu_12  .eccc_setup_intel  .eccc_setup_intel_2021.4.0  .git-subtree  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  MANIFEST  Makefile  README.md  _cado  cado
code_special_dbg/: NOTES  dcmip_2012_init_1_2_3_module.F90
doc/: README.run
scripts/: checkdmpart.sh  findtopo  gem_test_RI  gem_test_acid  gem_test_ptopo  gem_test_results  gem_test_rstrt  gem_test_synthetic  gem_tests  rungem.sh  runmod.sh  setmod.sh
scripts/support/: r.run_in_parallel
share/gem-maestro/: version.in
share/nml_ref/: gem_settings.5.0-u1.rc3.ref  gem_settings.5.0-u1.rc3.ref.kv  gem_settings.5.0-u1.rc4.ref.k  gem_settings.5.1-u1.a8.ref.k  gem_settings.5.1-u1.a8.ref.kv  gem_settings.5.1.0-a11+nc1.ref  gem_settings.5.1.0-a11+nc1.ref.k  gem_settings.5.1.0-a11+nc1.ref.kv  gem_settings.5.1.0-a12.ref  gem_settings.5.1.0-a12.ref.k  gem_settings.5.1.0-a12.ref.kv  gem_settings.5.1.0-a13.ref  gem_settings.5.1.0-a13.ref.k  gem_settings.5.1.0-a13.ref.kv  gem_settings.5.1.0-a14.ref.k  gem_settings.5.1.0-a14.ref.kv  gem_settings.5.1.0-b1.ref.kv  gem_settings.5.1.0-b2.ref  gem_settings.5.1.0-b2.ref.k  gem_settings.5.1.0-rc10.ref  gem_settings.5.1.0-rc10.ref.k  gem_settings.5.1.0-rc10.ref.kv  gem_settings.5.1.0-rc2.ref.kv  gem_settings.5.1.0-rc3.ref  gem_settings.5.1.0-rc3.ref.k  gem_settings.5.1.0-rc5.ref  gem_settings.5.1.0-rc5.ref.k  gem_settings.5.1.0-rc5.ref.kv  gem_settings.5.1.0-rc6.ref.k  gem_settings.5.1.0-rc9.ref  gem_settings.5.1.0-rc9.ref.kv  gem_settings.5.1.a10.ref  gem_settings.5.1.a10.ref.k  gem_settings.5.1.a10.ref.kv  gem_settings.5.1.a11.ref  gem_settings.5.1.a11.ref.k  gem_settings.5.1.a11.ref.kv  (+52 more)
src/: CMakeLists.txt
src/gem/: CMakeLists.txt  maingemdm.F90  mainmodel.F90  model.F90
src/gemdyn/: CMakeLists.txt  MANIFEST
src/gemdyn/src/IO_server/: INs_base.F90  INs_closeFST.F90  INs_data.F90  INs_gz3d.F90  INs_gz_from_vgd.F90  INs_init.F90  INs_mod.F90  INs_openFST.F90  INs_send.F90  INs_server.F90  INs_shared_mem.F90  INs_wait.F90  IOs_mod.F90  OUTs_closFST.F90  OUTs_fstecr.F90  OUTs_igs.F90  OUTs_init.F90  OUTs_mod.F90  OUTs_openFST.F90  OUTs_process_data.F90  OUTs_server.F90  OUTs_whichFST.F90  OUTs_wrtref.F90
src/gemdyn/src/base/: BDF_interp_traj.F90  BcubH_QntV.F90  Bermejo_Conde.F90  CW_vderiva.F90  CW_vinterp.F90  H3rd_deriv.inc  H3rd_ope.inc  H3rd_stag.inc  H5th_deriv.inc  H5th_ope.inc  H5th_stag.inc  HOR_bndry.F90  HORgrid_options.F90  ILMC_LAM.F90  MiMd_init.F90  MiMd_mod.F90  QW_vderiva.F90  QW_vinterp.F90  SL_cubic.F90  SL_interp.F90  SL_quint.F90  SW_adz_main.F90  SW_adz_traject.F90  SW_adz_will.F90  SW_bac.F90  SW_bac3rd.F90  SW_comb_nli.F90  SW_delQ3rd.F90  SW_disp_traject.F90  SW_dynstep.F90  SW_elliptic_rhs.F90  SW_elliptic_rhs3rd.F90  SW_euler_adz_traject.F90  SW_matvec.F90  SW_matvec3rd.F90  SW_matvec_init.F90  SW_nli.F90  SW_pre.F90  SW_prerhs3rd.F90  SW_rhs.F90  (+394 more)
src/gemdyn/src/canonical/: canonical_cases.F90  dcmip_2012_init_1_2_3_module.F90  dcmip_2016_physics.F90  dcmip_Schaer_mountain.F90  dcmip_baroclinic_wave_2012.F90  dcmip_baroclinic_wave_2016.F90  dcmip_diagnostics.F90  dcmip_gravity_wave.F90  dcmip_init.F90  dcmip_options.F90  dcmip_steady_state_mountain.F90  dcmip_supercell.F90  dcmip_tracers11_transport.F90  dcmip_tracers12_transport.F90  dcmip_tracers13_transport.F90  dcmip_tropical_cyclone.F90  dcmip_vrd_main.F90  dcmip_vrd_set.F90  wil_case6.F90  wil_diagnostics.F90  wil_init.F90  wil_set.F90  wil_uvcase6.F90
src/gemdyn/src/main/: CMakeLists.txt  checkdmpart.F90  gemgrid.F90  mainserverIN.F90  mainserverout.F90  prgemnml.F90
src/mach/: .gitignore  CMakeLists.txt  MANIFEST  config.in
src/mach/.gitlab/issue_templates/: bug_report.md  feature_proposal.md  technical_change.md
src/mach/.gitlab/merge_request_templates/: bug_fix.md  new_feature.md  technical_change.md
src/mach/include/: mach_version.in
src/mach/readme/: README_compilation.md  README_namelist.md  README_variables.md  README_version.md  Release_notes.txt
src/mach/src/: CMakeLists.txt  sourcelist.cmake
src/mach/src/base/: chm_businit.F90  chm_cffeps_init.F90  chm_consphychm_mod.F90  chm_datime_mod.F90  chm_exe.F90  chm_fst_openfile.F90  chm_getphybus_struct.F90  chm_headers_mod.F90  chm_init.F90  chm_load_emissions.F90  chm_load_metvar.F90  chm_load_store_tracers.F90  chm_metvar_mod.F90  chm_mjrpts_get_emissions.F90  chm_mjrpts_get_size.F90  chm_mjrpts_get_stkinfo.F90  chm_mjrpts_sortinfo_mod.F90  chm_nml.F90  chm_nml_mod.F90  chm_phyvar_mod.F90  chm_pkg_fields_init.F90  chm_ptopo_grid_mod.F90  chm_set_dbg_point.F90  chm_species_idx_mod.F90  chm_species_info_mod.F90  chm_utils_mod.F90  difuvdfj_2d.F90  gocart_so2so4.F90  mach_adom2_drive.F90  mach_adom2_rates_mod.F90  mach_adom2kpp_main.F90  mach_adom2kppb_main.F90  mach_adom2yb_main.F90  mach_aurams_cldcv2d.F90  mach_aurams_headers_mod.F90  mach_aurams_prntrow.F90  mach_aurams_tsysms.F90  mach_biog_beis.F90  mach_biog_main.F90  mach_biog_parcalc.F90  (+145 more)
src/mach/src/gemmod/rpnphy/: condensation.F90  microphy_my2.F90  microphy_p3.F90  phyexe.F90
src/mach/tools/: Makefile  check_nml_doc  clean_GM_code_directories_from_compilation_files.sh  prep_compile.bash  print_species_master.ftn90  regen_headers.sh  rungm.sh  tracers_init.bash  update_gem_version.sh  update_gemmach_version.sh
src/mach/tools/cmake_override/: Makefile  src_CMakeLists.txt  src_gem_CMakeLists.txt
src/mach/tools/gm-integration-test/: compile-gm-for-integration-test.sh  initialize-gm-integration-test.sh  prepare-new-gm-integration-test.sh  run-gm-integration-test.sh  validate-gm-integration-test.sh
src/mach/tools/liebman/: Makefile  README.txt  lieb_limite.ftn90  liebman_main.ftn90  negmask.ftn90
src/mach/tools/link_emiss_inventories/: README_revision1733  link_emissions_directories.bash
src/rpn-si/rpncomm/: .gitlab-ci.yml  CMakeLists.txt  Config.cmake.in  MANIFEST  README.org
src/rpn-si/rpncomm/src/: CMakeLists.txt  RPN_COMM_chdir.c
src/rpn-si/rpncomm/src/stubs/: CMakeLists.txt
src/rpnphy/src/api/: phy_step.F90
(+306 files in other folders)
